Region switcher: Increase max-width to prevent cutoff

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -11733,7 +11733,7 @@ div.ui-dialog div.autoscaler div.field-group div.form-container form div.form-it
   color: #FFFFFF;
   font-size: 12px;
   font-weight: bold;
-  max-width: 67px;
+  max-width: 285px;
   overflow: hidden;
   white-space: nowrap;
   /*+placement:shift -1px 0px;*/
